unpackaged/main/default/objects/Article_Resource__c/Article_Resource__c.object-meta.xml
<CustomObject>
    <description>Junction linking a Knowledge article to a Resource, in both directions. Knowledge_Article_Id__c stores the version-stable KnowledgeArticleId (KA Id) — NOT the Knowledge__kav version Id, which changes on every republish. Read by ResourceCenterService.getResourcesForArticle / getRelatedArticlesForResource.</description>
    <label>Article Resource</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Article Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>