unpackaged/main/default/objects/Article_Resource__c/fields/Article_UrlName__c.field-meta.xml
<CustomField>
    <fullName>Article_UrlName__c</fullName>
    <description>Redundant human-readable reference to the article (its UrlName) for routing and admin readability.</description>
    <label>Article UrlName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>