unpackaged/main/default/objects/Article_Resource__c/fields/Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id__c</fullName>
    <description>The version-stable KnowledgeArticleId (KA Id, Knowledge__ka) of the linked article — NOT the Knowledge__kav version Id, which changes on every republish. External Id for indexed lookup and data loads.</description>
    <externalId>true</externalId>
    <label>Knowledge Article Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>