unpackaged/main/default/objects/Article_Resource__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The linked resource.</description>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Related Articles</relationshipLabel>
    <relationshipName>Article_Resources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>